# GraphProver

./: .gitignore  AUTHORS  Makefile.am  README.md  TODO  cfg.mk  config.ld  configure.ac
graphprover/: Makefile.am  graph.c  igraphx.h  wff.lua
tests/: Makefile.am  test-graph-add-node.lua  test-graph-api.lua  test-graph-delete.lua  test-graph-new.lua  test-wff-__eq.lua  test-wff-api.lua  test-wff-is-immediate-sub.lua  test-wff-new.lua  test-wff-parse.lua  tests.lua
